# circleci-build-compare

./: .gitignore  README.md  cli.py  pyproject.toml
.circleci/: config.yml
