[tool.poetry]
name = "circleci-build-compare"
version = "0.1.0"
description = ""
authors = ["kelvintaywl <kelvintaywl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
